--- a/updateconfig.ini
+++ b/updateconfig.ini
@@ -1,1 +1,42 @@
-aaa
+[install.ini]
+domain=192.168.1.122
+base_url=http://192.168.1.122/
+magento_release=2.2.0
+
+database_host=localhost
+database_name=magento2
+database_user=root
+database_pass=Skoda@9909
+
+linux_magento_user_name=magento
+linux_magento_user_pass=magento
+
+magento_connect_public_key=355a09d412780c49a369d5cdb82f7278
+magento_connect_private_key=3eedd615997400f14fc678180f7d243a
+
+language_code=en_US
+currency_code=USD
+
+admin_login_name=admin
+admin_login_pass=admin123
+admin_email=info@my-magento-2-webshop.com
+
+install_basics=yes
+install_nginx=yes
+install_apache=no
+install_mysql=yes
+install_php=yes
+install_mailer=yes
+install_certbot=no
+install_composer=yes
+install_redis=no
+
+swaping_settings=no
+
+magento_webserver_config=yes
+magento_connect_key_storing=yes
+magento_dependency_injection=yes
+magento_installation=yes
+magento_sample_data_installation=yes
+
+wait=6
